[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "veltui"
version = "0.1.0"
description = "Privacy-first AI chat in your terminal, powered by DuckDuckGo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kfrt" }]
dependencies = [
    "rich",
    "textual",
    "playwright",
]

[project.urls]
Homepage = "https://github.com/kfrttlw/veltui"

[project.scripts]
veltui = "veltui.veltui:main"

[tool.setuptools]
packages = ["veltui"]

[tool.ruff]
# PEP 8 allows raising the line limit to 99 for teams that agree on it. veltui
# keeps its aligned tables (models, themes, headers) readable at 99 instead of
# wrapping everything to 79.
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W"]
